crates/solidity/testing/snapshots/bindings_output/errors/named_args/generated/v1/0.4.22-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:3:19]
   │
 3 │ ╭─▶     error Failure (
   ┆ ┆   
 6 │ ├─▶     );
   │ │            
   │ ╰──────────── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[input.sol:8:23]
   │
 8 │         revert Failure({cause: Cause.NotAuthorized, details: "not owner"});
   │                       ──────────────────────────┬─────────────────────────  
   │                                                 ╰─────────────────────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     enum Cause { InsuficientFunds, NotAuthorized, InvalidDate }
   │          ──┬──   ────────┬───────  ──────┬──────  ─────┬─────  
   │            ╰─────────────────────────────────────────────────── name: 2
   │                          │               │             │       
   │                          ╰───────────────────────────────────── name: 3
   │                                          │             │       
   │                                          ╰───────────────────── name: 4
   │                                                        │       
   │                                                        ╰─────── name: 5
 3 │     error Failure (
   │     ──┬── ───┬───  
   │       ╰──────────── unresolved
   │              │     
   │              ╰───── name: 6
   │ 
 7 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 7
 8 │         revert Failure({cause: Cause.NotAuthorized, details: "not owner"});
   │         ───┬── ───┬───  
   │            ╰──────────── refs: built-in, built-in
   │                   │     
   │                   ╰───── name: 8
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭─────▶ contract Test {
  2 │ │   │       enum Cause { InsuficientFunds, NotAuthorized, InvalidDate }
    │ │   │   ─────────────────────────┬──────┬────────┬─────────────┬────────  
    │ │   │                            ╰──────────────────────────────────────── definiens: 3
    │ │   │                                   │        │             │          
    │ │   │                                   ╰───────────────────────────────── definiens: 2
    │ │   │                                            │             │          
    │ │   │                                            ╰──────────────────────── definiens: 4
    │ │   │                                                          │          
    │ │   │                                                          ╰────────── definiens: 5
  3 │ │   ╭─▶     error Failure (
    ┆ ┆   ┆   
  6 │ │ │ ├─▶     );
    │ │ │ │            
    │ │ │ ╰──────────── definiens: 6
  7 │ │ ╭───▶     function test() public {
  8 │ │ │             revert Failure({cause: Cause.NotAuthorized, details: "not owner"});
    │ │ │     ──────────────────────────────────────┬─────────────────────────────────────  
    │ │ │                                           ╰─────────────────────────────────────── definiens: 8
  9 │ │ ├───▶     }
    │ │ │             
    │ │ ╰───────────── definiens: 7
 10 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 1
────╯
